# eada-cpu

./: .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  build.sh  index.d.ts  index.js  package-lock.json  package.json  test-platform.js
config/: jest.sequencer.js
src/: eada.cpp  eada.h
test/: test-index.js  test-search.js
